# cyber-web

./: .gitignore  CMakeLists.txt  README.md
src/: AppUI.c  BufferStorage.c  CertificateManager.c  CyberWeb.ui  ElectronIPC.c  Helpers.c  HttpParser.c  Json.c  ProxyServer.c  RequestsManager.c  ServerManager.c  main.c
src/headers/: AppUI.h  BufferStorage.h  CertificateManager.h  ElectronIPC.h  Helpers.h  HttpParser.h  Json.h  ProxyServer.h  RequestsManager.h  ServerManager.h
tests/: CyberWeb_RootCA.crt  create-root.c  json-parser.c  proxy-server.c  test
